tests/baselines/reference/promiseEmptyTupleNoException.errors.txt
tests/cases/compiler/promiseEmptyTupleNoException.ts(3,3): error TS2322: Type 'any[]' is not assignable to type '[]'.
  Types of property 'pop' are incompatible.
    Type '() => any' is not assignable to type '() => never'.
      Type 'any' is not assignable to type 'never'.


==== tests/cases/compiler/promiseEmptyTupleNoException.ts (1 errors) ====
    export async function get(): Promise<[]> {
      let emails = [];
      return emails;
      ~~~~~~~~~~~~~~
!!! error TS2322: Type 'any[]' is not assignable to type '[]'.
!!! error TS2322:   Types of property 'pop' are incompatible.
!!! error TS2322:     Type '() => any' is not assignable to type '() => never'.
!!! error TS2322:       Type 'any' is not assignable to type 'never'.
    }
    